账户信息、修改信息输入UI

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -21,7 +21,7 @@
             android:layout_height="132dp"
             android:background="@drawable/bg_mine_top"
             android:paddingLeft="16dp"
-            android:paddingRight="28dp">
+            android:paddingRight="12dp">
 
             <TextView
                 android:id="@+id/userName"
@@ -44,10 +44,14 @@
 
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/accountInfo"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:clickable="true"
+                android:onClick="@{handler.click}"
+                android:scaleType="centerInside"
                 android:src="@drawable/ic_next_white" />
 
         </RelativeLayout>
