--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -110,7 +110,7 @@
                             android:layout_height="wrap_content"
                             android:layout_above="@+id/changeBTC"
                             android:text="@{minterUtil.getCnyRateBTC(pollNewInfo)}"
-                            android:textColor="#03C160"
+                            android:textColor="@{pollNewInfo.BTC.pricePercentChange.day>=0 ? @color/font_green : @color/font_red}"
                             android:textSize="@dimen/font_16"
                             android:textStyle="bold" />
 
@@ -119,7 +119,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
-                            android:text="+0.1%"
+                            android:text="@{minterUtil.getPercentChangeBTC(pollNewInfo)}"
                             android:textColor="#15233E"
                             android:textSize="@dimen/font_12" />
 
@@ -167,7 +167,7 @@
                             android:layout_height="wrap_content"
                             android:layout_above="@+id/changeETH"
                             android:text="@{minterUtil.getCnyRateETH(pollNewInfo)}"
-                            android:textColor="#03C160"
+                            android:textColor="@{pollNewInfo.ETH.pricePercentChange.day>=0 ? @color/font_green : @color/font_red}"
                             android:textSize="@dimen/font_16"
                             android:textStyle="bold" />
 
@@ -176,7 +176,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
-                            android:text="+0.1%"
+                            android:text="@{minterUtil.getPercentChangeETH(pollNewInfo)}"
                             android:textColor="#15233E"
                             android:textSize="@dimen/font_12" />
 
@@ -223,8 +223,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_above="@+id/changeUSDT"
-                            android:text="¥0.003921"
-                            android:textColor="#F33917"
+                            android:text="@{minterUtil.getCnyUSDT(pollNewInfo)}"
+                            android:textColor="@{pollNewInfo.USDT.pricePercentChange.day>=0 ? @color/font_green : @color/font_red}"
                             android:textSize="@dimen/font_16"
                             android:textStyle="bold" />
 
@@ -233,7 +233,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
-                            android:text="-0.2%"
+                            android:text="@{minterUtil.getPercentChangeUSDT(pollNewInfo)}"
                             android:textColor="#15233E"
                             android:textSize="@dimen/font_12" />
 
@@ -277,8 +277,8 @@
                         android:id="@+id/avilableLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="4dp"
                         android:layout_centerVertical="true"
+                        android:layout_marginLeft="4dp"
                         android:layout_toRightOf="@+id/greenDot"
                         android:text="可挖币种："
                         android:textAlignment="center"
@@ -308,14 +308,14 @@
                         tools:text="BTC" />
 
                     <TextView
-                        android:clickable="true"
-                        android:onClick="@{handler.click}"
                         android:id="@+id/customerService"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:background="@drawable/bg_blue_stoke"
+                        android:clickable="true"
+                        android:onClick="@{handler.click}"
                         android:paddingLeft="6dp"
                         android:paddingTop="2dp"
                         android:paddingRight="6dp"
