--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -54,6 +54,7 @@
                 android:maxLength="11"
                 android:paddingLeft="6dp"
                 android:singleLine="true"
+                android:text="15680809781"
                 android:textColor="#15233E"
                 android:textColorHint="#A0A7B3"
                 android:textSize="18sp" />
@@ -96,6 +97,7 @@
                 android:maxLength="16"
                 android:paddingLeft="6dp"
                 android:singleLine="true"
+                android:text="123456"
                 android:textColor="#15233E"
                 android:textColorHint="#A0A7B3"
                 android:textSize="18sp" />
