普通用户订单列表

--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -8,8 +8,8 @@
         <import type="android.view.View" />
 
         <variable
-            name="minter"
-            type="com.alaer.lib.api.bean.MinterSeries.MinterInfo" />
+            name="order"
+            type="com.alaer.lib.api.bean.OrderList.Order" />
 
         <variable
             name="util"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_toRightOf="@+id/label1"
-                android:text="1604211244567890"
+                android:text="@{String.valueOf(order.id)}"
                 android:textColor="#6D7686"
                 android:textSize="12sp" />
 
@@ -62,7 +62,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_toRightOf="@+id/label2"
-                android:text="2021年4月16日 至 2022年4月15日"
+                android:text="@{util.parseOrderTime(order)}"
                 android:textColor="#15233E"
                 android:textSize="14sp" />
 
@@ -83,7 +83,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_toRightOf="@+id/label3"
-                android:text="收益分成"
+                android:text="@{util.parseOrderType(order)}"
                 android:textColor="#6D7686"
                 android:textSize="12sp" />
 
@@ -104,7 +104,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_toRightOf="@+id/label4"
-                android:text="50台"
+                android:text="@{util.parseOrderQuanlity(order)}"
                 android:textColor="#6D7686"
                 android:textSize="12sp" />
 
@@ -139,7 +139,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_toRightOf="@+id/label6"
-                android:text="5000"
+                android:text="@{String.valueOf(order.amount)}"
                 android:textColor="#15233E"
                 android:textSize="16sp" />
 
