用户注册、忘记密码、修改密码

--- a/app/src/main/res/layout/activity_settngs.xml
+++ b/app/src/main/res/layout/activity_settngs.xml
@@ -68,7 +68,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/extractMoney"
+                android:id="@+id/modifyPwd"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:clickable="true"
