--- a/app/src/main/res/layout/layout_title_bar_black_fragment.xml
+++ b/app/src/main/res/layout/layout_title_bar_black_fragment.xml
@@ -13,6 +13,16 @@
         android:src="@drawable/ic_back_black" />
 
     <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginRight="16dp"
+        android:textColor="#15233E"
+        android:textSize="17sp"
+        tools:text="Title" />
+
+    <TextView
         android:id="@+id/title_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
