--- a/app/src/main/res/layout/fragment_forget_pwd.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd.xml
@@ -56,6 +56,7 @@
                 android:textSize="18sp" />
 
             <EditText
+                android:id="@+id/etPhone"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginLeft="84dp"
@@ -83,7 +84,7 @@
                 android:id="@+id/btnGetCode"
                 style="@style/BtnBLue"
                 android:layout_marginTop="218dp"
-                android:enabled="true"
+                android:enabled="false"
                 android:onClick="@{handler.click}"
                 android:text="获取验证码" />
 
