--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -41,6 +41,7 @@
                 android:textSize="18sp" />
 
             <EditText
+                android:id="@+id/etPhone"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginLeft="54dp"
@@ -61,8 +62,8 @@
 
             <ImageView
                 android:id="@+id/icClear"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="148dp"
                 android:clickable="true"
@@ -85,6 +86,7 @@
                 android:textSize="18sp" />
 
             <EditText
+                android:id="@+id/etPwd"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginLeft="54dp"
