--- a/app/src/main/res/layout/fragment_extract_coin.xml
+++ b/app/src/main/res/layout/fragment_extract_coin.xml
@@ -281,11 +281,22 @@
             </LinearLayout>
 
             <View
+                android:id="@+id/line"
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:layout_below="@+id/recordTitle"
                 android:layout_marginTop="11dp"
                 android:background="#D6D6D6" />
+
+            <likly.view.repeat.RepeatView
+                android:id="@+id/repeatView"
+                style="@style/RepeatView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/line"
+                app:emptyView="@layout/layout_no_data"
+                app:viewHolderClass="com.metron.coin.adapter.WithdrawListAdapter"
+                app:viewHolderLayout="@layout/item_withdraw" />
 
             <View
                 android:layout_width="match_parent"
